Sat May 28 10:39:47 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_comprehensive.rb: Converted exception for
	  unavailable Unicode data files to failed assertion.

Sat May 28 10:26:18 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/cgi/util.rb: added to missing quote.
	  [fix GH-1363][ci skip] Patch by @dwaller

Fri May 27 17:38:49 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_local_constants_i): exclude hidden constants.
	  [ruby-core:75575] [Bug #12389]

Fri May 27 17:09:44 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* transcode.c (str_transcode0): scrub in the given encoding when
	  the source encoding is given, not in the encoding of the
	  receiver.  [ruby-core:75732] [Bug #12431]

Fri May 27 15:07:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args): remove nul padding which
	  caused syntax error if fmt is not a string literal.

	* include/ruby/ruby.h (rb_scan_args_verify): suppress array-bounds
	  warnings by old clang.

	* include/ruby/ruby.h (rb_scan_args0): make extractor macros
	  inline functions, which do not validate the format and are
	  unnecessary to be expanded.

Fri May 27 01:00:36 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* symbol.c (is_identchar): use ISDIGIT instead of rb_enc_isalnum.
	  Though rb_enc_isalnum is encoding aware function, its argument here
	  is *m, which is a single byte. Therefore ISDIGIT is faster.

	* symbol.c (is_special_global_name): ditto.

	* symbol.c (rb_enc_symname_type): ditto.

Fri May 27 00:39:40 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args): add nul padding here to
	  apply to all references.

	* include/ruby/ruby.h (rb_scan_args_verify): move length mismatch
	  check outside conditional operators.

Thu May 26 14:21:10 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_pkey_dh.c (ossl_dh_compute_key): Check that the DH